# MediCart

./: .gitignore  CODE_REVIEW.md  JEON_WORK_SUMMARY.md  README.md  gazebo_readme.md  kiosk.html
.github/workflows/: slack-main-push.yml
common/: discovery.sh  discovery3.sh  loc6.launch.py  loc6_amcl.yaml  localization_bondpatched.launch.py  nav3.launch.py  nav3.yaml  nav6.launch.py  nav6.yaml  navigation_bondpatched.launch.py  robot.env  robot3.env
common/maps/: ward_map.yaml
docs/: integration_todoList.md  system_architecture.md
docs/.obsidian/: workspace.json
docs/architecture/: 01_system_architecture.md  02_ros2_packages.md  03_ros2_interfaces.md  04_db_schema.md  05_mermaid_architecture.md  05_multi_robot_system_architecture.md  README.md  check_mermaid.py
docs/architecture/diagrams/: 00_system_overview.html  01_node_map.html  02_workflows.html  README.md  gen_workflow_drawio.py  medicart-common-infra.drawio  medicart-nurse-cart-workflow.drawio  medicart-patrol-intake-workflow.drawio  medicart_system_architecture.drawio
docs/presentation/: business_system_requirements.md
docs/superpowers/plans/: 2026-06-06-web-ocr-page.md  2026-06-06-web-rtdb-relocate.md  2026-06-07-mission-manager-mode-arbitration.md  2026-06-07-nurse-tracker-round.md  2026-06-07-obstacle-detector-ground.md  2026-06-08-console-follow-mode.md  2026-06-08-web-goto-integration.md  2026-06-08-web-rbac-roles.md  2026-06-09-main-jaehoon-integration.md  2026-06-09-ninety-map-config-alignment.md  (+5 more)
log/: latest_build
medicart_ws/: dashboard 코드리뷰 가이드.md  내일 구현 노션용.md  내일 할일.md
medicart_ws/docs/: 06_system_architecture_explanation_script.md  07_medicart_architecture_presentation_notes.md  08_robot6_function_runbook.md  09_robot6_medication_mode_architecture_plan.md  10_robot6_nurse_tracking_architecture.md  system_architecture_one_page.mmd
medicart_ws/src/nurse_tracker/: README.md  package.xml  setup.cfg  setup.py
medicart_ws/src/nurse_tracker/nurse_tracker/: follow_control.py  host_tracker.py  nav_goal_follower_node.py  perception.py  spatial_estimator.py  spatial_transform.py  tracker_node.py  yolo_detector.py  yolo_helper.py
medicart_ws/src/nurse_tracker/resource/: nurse_tracker
medicart_ws/src/nurse_tracker/test/: test_follow_control.py
medicart_ws/src/nurse_tracker_ocl/: README.md  package.xml  setup.cfg  setup.py
medicart_ws/src/nurse_tracker_ocl/nurse_tracker_ocl/: feature_extractor.py  memory_manager.py  ocl_tracker_node.py
medicart_ws/src/nurse_tracker_ocl/resource/: nurse_tracker_ocl
medicart_ws/src/nurse_tracker_ocl/test/: test_pep257.py
medicart_ws/src/simulation/: README.md  package.xml  setup.py
medicart_ws/src/simulation/config/: nav2.yaml  slam.yaml
medicart_ws/src/simulation/launch/: hospital_multi.launch.py  hospital_sim.launch.py  nav2.launch.py  slam.launch.py
medicart_ws/src/simulation/simulation/: simulation_node.py
medicart_ws/src/simulation/worlds/: generate_hospital_world.py  hospital.sdf
ocr/: .gitignore  README.md  ocr_demo.py  ocr_realtime.py  requirements.txt
ocr_ws/: .gitignore  README.md
ocr_ws/src/ocr_detector/: package.xml  setup.cfg  setup.py
ocr_ws/src/ocr_detector/launch/: ocr.launch.py  ocr_web.launch.py  ocr_webcam.launch.py
ocr_ws/src/ocr_detector/ocr_detector/: db_bridge.py  medicine_checker.py  ocr_node.py  text_cleaner.py  web_node.py
ocr_ws/src/ocr_detector/ocr_detector/engines/: base.py  easyocr_engine.py  gcp_engine.py
ocr_ws/src/ocr_interfaces/: CMakeLists.txt  package.xml
ocr_ws/src/ocr_interfaces/srv/: GetOcrResult.srv
web/: .gitignore  README.md
web/backend/: .env.example  app.py  auth.py  fb_read.py  ocr.py  patients.py  requirements.txt  rooms.yaml
web/deploy/: DEPLOY.md  medicart-backend.service  medicart-frontend.service  medicart-tunnel.service  setup-tunnel.sh
web/docs/: architecture.md  deploy.md  setup.md
web/frontend/: middleware.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts
web/legacy/: intel-backend.service  intel-frontend.service  intel-tunnel.service  patient_data.py  redis_bus.py  sync-ns.cjs
(+188 files in other folders)
