<?xml version="1.0"?>
<package format="3">
  <name>ocr_detector</name>
  <version>0.1.0</version>
  <description>OCR detector ROS2 node — EasyOCR and GCP Vision API</description>
  <maintainer email="dev@medicart.local">MediCart Team</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ocr_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
