<?xml version="1.0"?>
<package format="3">
  <name>ocr_interfaces</name>
  <version>0.1.0</version>
  <description>Custom service interfaces for ocr_detector</description>
  <maintainer email="dev@medicart.local">MediCart Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
